# undangan-nikah-ghulam-backend

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_couple_bride_father_name_couple_bride_full_name_and_more.py
core/: settings.py  urls.py
db/: docker-compose.yml
