[project]
name = "undangan-nikah-ghulam-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Ghulam Abrar",email = "gh_abrar51@yahoo.co.id"}
]
requires-python = ">=3.12"
dependencies = [
    "django (==5.0.6)",
    "djangorestframework (==3.15.2)",
    "psycopg2-binary (==2.9.9)",
    "python-decouple (==3.8)",
    "debugpy (>=1.8.20,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
